# one-observability-demo

./: .codespellrc  .git-commit-msg.txt  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY_FIXES.md  architecture.md  aws-codeguru-reviewer.yml  bootstrap.yaml  buildspec.yml  cloud9-cfn.yaml  cloud9-v2.yaml  codepipeline-stack.yaml  eslint.config.mjs  index.html  pack.sh  package-lock.json  package.json  pets_oneclick.yml  setup-cloudshell.sh  sitemap.xml  typedoc.json
src/applications/microservices/petfood-rs/: .dockerignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md  deploy-ecs.sh  postman_collection.json  test_enhanced_logging.md
src/applications/microservices/petfood-rs/benches/: food_operations.rs  food_search.rs
src/applications/microservices/petfood-rs/examples/: complete_user_journey.sh  config_demo.rs
src/applications/microservices/petfood-rs/scripts/: run_tests.sh
src/applications/microservices/petfood-rs/src/: lib.rs  main.rs
src/applications/microservices/petfood-rs/src/config/: mod.rs  refresh_manager.rs  tests.rs
src/applications/microservices/petfood-rs/src/handlers/: admin.rs  api.rs  food.rs  health.rs  metrics.rs  middleware.rs  mod.rs
src/applications/microservices/petfood-rs/src/models/: cart.rs  enums.rs  errors.rs  events.rs  food.rs  mod.rs  validation.rs
src/applications/microservices/petfood-rs/src/observability/: metrics.rs  middleware.rs  mod.rs  tracing.rs
src/applications/microservices/petfood-rs/src/repositories/: cart_repository.rs  food_repository.rs  mod.rs  tests.rs  (+1 more)
src/applications/microservices/petfood-rs/tests/: e2e_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
(+1335 files in other folders)
