[package]
name = "petfood-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-ssm = "1.0"
aws-sdk-eventbridge = { version = "1.88", features = ["behavior-version-latest"] }
aws-smithy-types = "1.0"
aws-smithy-runtime-api = "1.0"

# Observability - OpenTelemetry
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Metrics - Prometheus
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
rust_decimal_macros = "1.0"
async-trait = "0.1"

# Configuration
config = "0.14"
envy = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["dynamodb"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
proptest-derive = "0.4"
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"
once_cell = "1.19"

[[bench]]
name = "food_search"
harness = false

[[bench]]
name = "food_operations"
harness = false